# dummy-project

./: CMakeLists.txt  README.txt
2015_output/: README.txt  debug_build.txt  debug_configure.txt  relwithdebinfo_build.txt
2017_output/: README.txt  debug_build.txt  relwithdebinfo_build.txt  relwithdebinfo_configure.txt
cmake_output/: debug_build.txt  debug_configure.txt  relwithdebinfo_build.txt  relwithdebinfo_configure.txt
